--- a/src/Results.css
+++ b/src/Results.css
@@ -1,100 +1,22 @@
-.panel-heading.card-header {
-    background-color: transparent;
-    border-bottom: none;
-    padding-top: 1.5rem;
-    padding-bottom: 0;
-    position: relative;
-}
-.sv_main .sv_header__text {
-    display: inline !important;
-}
-.panel-heading.card-header::after, h4::after {
-    content: "";
-    background-color: rgb(153,153,153);
-    width: 107px;
-    height: 2px;
-    margin: 28px auto 50px;
-    display: block;
-}
-h4::after {
-    margin-bottom: 28px;
-}
-h4.sv_p_title::after {
-    display: none;
-}
-.small {
-    margin-bottom: 45px;
-    font-size: 1em !important;
-    text-align: center !important;
-}
-
-/* Progress bar styles */
-.sv_main.sv_main .progress {
-    width: 80% !important;
-    margin-bottom: 50px !important;
-}
-.progress {
-    border-radius: 0 !important;
-}
-.progress-bar {
-    background-color: #5a90a7 !important;
-}
-
-/* Question styles */
-.sv_row {
-    margin-bottom: 15px;
-}
-.sv_p_container {
+/* Results table */
+table {
     background-color: #5a90a7;
-    color: #fff;
-    overflow: hidden;
-}
-/*.sv_row:nth-child(even) .sv_p_container {
-    background-color: rgba(103,143,164,0.75);
-}*/
-.sv_p_container h4, .sv_p_container h4 span {
-    padding-top: 1.5em;
-    padding-bottom: 1em;
-    padding-right: 1em;
-    text-align: left !important;
-}
-.sv_row .sv_row {
-    border-bottom: 1px dotted #fff;
-    margin-bottom: 15px;
-}
-.sv_row .sv_row:last-child {
-
-}
-.sv_row .sv_row h5 {
-    font-size: 17px;
-}
-.sv_row .small {
-    margin: 10px 0;
-    overflow: hidden;
-}
-.sv_row .btn-group .btn {
-    background-color: #fff;
-    color: #35373c;
     border-color: #fff;
-    min-width: 10px !important;
-    margin-right: 5px;
-    border-radius: 0;
-    display: inline-block;
-}
-.sv_row .btn-group .btn:hover, .sv_row .btn-group .btn.active {
-    background-color: #35373c;
+    border-style: solid;
     color: #fff;
-    border-color: #35373c;
+    margin-bottom: 45px;
 }
-
-/* Survey footer styles */
-.panel-footer.card-footer {
-    background-color: transparent;
-    border-top: none;
-    margin-top: 20px;
-    margin-bottom: 35px;
-    text-align: center;
+table tbody tr:last-child td {
+    margin-bottom: 40px;
 }
-.panel-footer.card-footer .sv-button-link {
-    margin: 0 10px;
+table tbody th td {
+    padding: 1.25em 1.25em 0.5em;
+}
+table tbody tr td {
+    border-bottom: 1px solid rgba(255,255,255, 0.25);
+    padding: 0.5em 1.25em 0.5em;
+}
+table tbody th td, table tbody tr td {
+    width: 100%;
+    display: block;
 }
