Add lower margins to buttons

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ h4.sv_p_title, h4.sv_p_title span {
     border-radius: 0 !important;
     color: #212529;
     width: 231px;
+    margin-bottom: 15px;
     height: 58px;
     font-family: Verdana, Geneva, Tahoma, sans-serif !important;
     font-size: 13.5px !important;
