--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 body {
     background-color: #f9f9f9;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    /*font-family: Helvetica, Arial, sans-serif;*/
 }
 
 h1, h2, h3, h3 span, h4, h4 span {
-    font-size: 30px;
-    font-weight: bold;
+    color: #4e4e4d;
+    font-size: 1.9rem;
+    font-weight: 500;
     text-align: center;
+}
+h1 strong, h2 strong, h3 strong, h4 strong {
+    color: #608da2;
+    font-weight: 700;
 }
 h1 span {
     color: rgb(127,127,127);
