Completed intro styles

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 body {
     background-color: #f9f9f9;
+    color: #4e4e4d;
     font-family: 'Open Sans', sans-serif;
     /*font-family: Helvetica, Arial, sans-serif;*/
 }
@@ -10,20 +11,10 @@ h1, h2, h3, h3 span, h4, h4 span {
     color: #4e4e4d;
     font-size: 1.9rem;
     font-weight: 500;
-    text-align: center;
 }
 h1 strong, h2 strong, h3 strong, h4 strong {
     color: #608da2;
     font-weight: 700;
-}
-h1 span {
-    color: rgb(127,127,127);
-}
-h2 {
-    text-align: left;
-}
-h3, h3 span {
-    font-size: 26px;
 }
 h3 {
     margin-bottom: 0 !important;
@@ -34,6 +25,43 @@ h4.sv_p_title, h4.sv_p_title span {
     font-weight: bold;
     text-align: center;
 }
+p {
+    font-size: 0.9rem;
+    font-weight: 400;
+    line-height: 150%;
+}
+p a {
+    color: #4e4e4d;
+    font-weight: 500;
+    text-decoration: none;
+}
+p a:hover {
+    color: #608da2;
+}
+.container.container-alt {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+.row {
+    --bs-gutter-x: 0 !important;
+}
+.member-title hr {
+    display: inline-block;
+    width: 66px;
+    border: none;
+    border-bottom: 5px solid #608da2;
+    padding: 0px;
+    opacity: 1;
+}
+.member-text p {
+    width: 100%;
+    color: #4e4e4d;
+    margin-left: auto;
+    margin-right: auto;
+}
 .separator {
     background-color: rgb(153,153,153);
     width: 107px;
@@ -41,6 +69,26 @@ h4.sv_p_title, h4.sv_p_title span {
     margin: 28px auto;
     display: block;
 }
+.member-button-link {
+    font-family: 'Gotham A', 'Gotham B', Helvetica, Arial, Verdana, sans-serif;
+    display: inline-block;
+    color: #083147;
+    font-size: 1em;
+    font-weight: 700;
+    width: 100%;
+    border: 2px solid #608da2;
+    background-color: transparent;
+    padding: 0.75rem 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+}
+.member-button-link:hover {
+    background-color: #608da2;
+    color: #FFF;
+}
+
 .button-link, .sv-button-link {
     border: 1px solid rgb(127,127,127) !important;
     border-radius: 0 !important;
@@ -62,4 +110,16 @@ h4.sv_p_title, h4.sv_p_title span {
 }
 .button-link:hover {
     color: #212529;
+}
+
+@media screen and (min-width: 768px) {
+    .member-button-link {
+        width: auto;
+    }
+}
+@media screen and (max-width: 576px) {
+    .row > * {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
 }
