--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 body {
-    background-color: #f9f9f9;
     color: #4e4e4d;
     font-family: 'Open Sans', sans-serif;
     /*font-family: Helvetica, Arial, sans-serif;*/
@@ -24,6 +23,10 @@ h4.sv_p_title, h4.sv_p_title span {
     font-size: 20px;
     font-weight: bold;
     text-align: center;
+}
+.member-title h2 {
+    font-size: 1.3rem;
+    line-height: 120%;
 }
 p {
     font-size: 0.9rem;
@@ -112,7 +115,18 @@ p a:hover {
     color: #212529;
 }
 
+@media screen and (min-width: 576px) {
+    .member-title h2 {
+        font-size: 1.5rem;
+    }
+}
 @media screen and (min-width: 768px) {
+    .member-title h2 {
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 1.9rem;
+    }
     .member-button-link {
         width: auto;
     }
