--- a/src/Survey.css
+++ b/src/Survey.css
@@ -1,3 +1,20 @@
+h4 .sv-string-viewer {
+    color: #676767;
+    margin-bottom: 1.5rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    display: block;
+}
+.small {
+    margin-bottom: 45px;
+}
+.small .sv-string-viewer {
+    font-size: 0.9rem !important;
+    font-weight: 400;
+    line-height: 150%;
+    text-align: left;
+}
 .panel-heading.card-header {
     background-color: transparent;
     border-bottom: none;
@@ -27,24 +44,8 @@
     font-weight: 400;
     line-height: 150%;
 }
-.panel-heading.card-header::after, h4::after {
-    content: "";
-    background-color: rgb(153,153,153);
-    width: 107px;
-    height: 2px;
-    margin: 28px auto 50px;
-    display: block;
-}
-h4::after {
-    margin-bottom: 28px;
-}
 h4.sv_p_title::after {
     display: none;
-}
-.small {
-    margin-bottom: 45px;
-    font-size: 1em !important;
-    text-align: center !important;
 }
 
 /* Progress bar styles */
