--- a/src/Survey.css
+++ b/src/Survey.css
@@ -1,51 +1,28 @@
 h4 .sv-string-viewer {
-    color: #676767;
     margin-bottom: 1.5rem;
     font-size: 1.4rem;
     font-weight: 700;
     text-transform: uppercase;
     display: block;
 }
+h4.sv_p_title {
+    margin-bottom: 1.75em;
+    padding: 0 !important;
+}
+h4.sv_p_title .sv-string-viewer {
+    margin-bottom: 0;
+    font-size: 0.9rem;
+    line-height: 150%;
+    text-transform: none;
+}
 .small {
-    margin-bottom: 45px;
+    margin-bottom: 2.5em;
 }
 .small .sv-string-viewer {
     font-size: 0.9rem !important;
     font-weight: 400;
     line-height: 150%;
     text-align: left;
-}
-.panel-heading.card-header {
-    background-color: transparent;
-    border-bottom: none;
-    padding-top: 1.5rem;
-    padding-bottom: 0;
-    position: relative;
-}
-.sv_main .sv_header__text {
-    display: inline !important;
-}
-.sv_main .sv-hidden.show-text {
-    padding-left: 0;
-    display: block !important;
-}
-.sv_main .sv-hidden.show-text.inbar {
-    display: none !important;
-}
-.sv-progress-text {
-    color: #4e4e4d !important;
-    position: absolute;
-    margin-top: 24px;
-    color: #9d9d9d;
-    font-size: .87em;
-    font-weight: bold;
-    padding-left: .6321em;
-    font-size: 0.9rem;
-    font-weight: 400;
-    line-height: 150%;
-}
-h4.sv_p_title::after {
-    display: none;
 }
 
 /* Progress bar styles */
@@ -64,62 +41,101 @@ h4.sv_p_title::after {
 .progress-bar {
     background-color: #5a90a7 !important;
 }
+.sv-progress-text {
+    color: #4e4e4d !important;
+    position: absolute;
+    margin-top: 24px;
+    color: #9d9d9d;
+    font-size: .87em;
+    font-weight: bold;
+    padding-left: .6321em;
+    font-size: 0.9rem;
+    font-weight: 400;
+    line-height: 150%;
+}
+.sv_main .sv_header__text {
+    display: inline !important;
+}
+.sv_main .sv-hidden.show-text {
+    padding-left: 0;
+    display: block !important;
+}
+.sv_main .sv-hidden.show-text.inbar {
+    display: none !important;
+}
 
 /* Question styles */
 .sv_row {
-    margin-bottom: 15px;
+    margin-bottom: 0.75em;
+}
+.sv_bootstrap_css .sv_row .sv_qstn {
+    padding: 0;
 }
 .sv_p_container {
-    background-color: #5a90a7;
-    color: #fff;
+    border-top: 1px solid #dadada;
+    padding-top: 2em;
     overflow: hidden;
 }
-/*.sv_row:nth-child(even) .sv_p_container {
-    background-color: rgba(103,143,164,0.75);
-}*/
+
 .sv_p_container h4, .sv_p_container h4 span {
-    padding-top: 1.5em;
-    padding-bottom: 1em;
-    padding-right: 1em;
     text-align: left !important;
 }
 .sv_row .sv_row {
-    border-bottom: 1px dotted #fff;
-    margin-bottom: 15px;
+    margin-bottom: 1em;
 }
 .sv_row .sv_row:last-child {
 
 }
 .sv_row .sv_row h5 {
-    font-size: 17px;
+    font-size: 0.9rem;
+    font-weight: 400;
 }
-.sv_row .small {
-    margin: 10px 0;
-    overflow: hidden;
+.sv-rating {
+    margin-bottom: 1em;
 }
-.sv_row .btn-group .btn {
-    background-color: #fff;
-    color: #35373c;
-    border-color: #fff;
-    min-width: 10px !important;
-    margin-right: 5px;
-    border-radius: 0;
-    display: inline-block;
+.sv-rating .sv-rating__item {
+    border: 1px solid #dadada;
+    border-right: 0;
+    width: 90px;
+    padding: 12px 8px;
+    text-align: center;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
-.sv_row .btn-group .btn:hover, .sv_row .btn-group .btn.active {
-    background-color: #35373c;
-    color: #fff;
-    border-color: #35373c;
+.sv-rating .sv-rating__item.sv-rating__item--selected {
+    background-color: #608da2;
+    border: 1px solid #608da2;
+    color: #FFF;
+}
+.sv-rating .sv-rating__item:hover {
+    color: #608da2;
+    cursor: pointer;
+}
+.sv-rating fieldset .sv-rating__item:last-child {
+    border-right: 1px solid #dadada;
+}
+.sv-rating .sv_q_rating_item_text {
+    color: #676767;
+    font-size: 0.7rem;
+    font-weight: 500;
+    display: block;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+}
+.sv-rating .sv-rating__item.sv-rating__item--selected .sv_q_rating_item_text {
+    color: #FFF;
+}
+.sv-rating .sv-rating__item:hover .sv_q_rating_item_text {
+    color: #608da2;
 }
 
 /* Survey footer styles */
 .panel-footer.card-footer {
     background-color: transparent;
-    border-top: none;
-    margin-top: 20px;
-    margin-bottom: 35px;
-    text-align: center;
+    border-top: 1px solid #dadada;
+    margin-bottom: 2.5em;
+    padding: 1.75em 0;
 }
 .panel-footer.card-footer .sv-button-link {
-    margin: 0 10px;
+    margin: 0 0 10px;
 }
