--- a/src/Survey.css
+++ b/src/Survey.css
@@ -134,8 +134,31 @@ h4.sv_p_title .sv-string-viewer {
     background-color: transparent;
     border-top: 1px solid #dadada;
     margin-bottom: 2.5em;
-    padding: 1.75em 0;
+    padding: 1.75em 0 0;
+    overflow: hidden;
 }
 .panel-footer.card-footer .sv-button-link {
+    background-color: #608da2;
+    color: #FFF;
+    border: none !important;
+    width: 160px;
+    height: auto;
     margin: 0 0 10px;
+    padding: 10px;
+    font-size: 0.7rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+}
+.panel-footer.card-footer .sv-button-link:hover {
+    background-color: #083147;
+}
+.panel-footer.card-footer .sv-footer__prev-btn {
+    float: left;
+}
+.panel-footer.card-footer .sv-footer__next-btn, .panel-footer.card-footer .sv-footer__complete-btn {
+    margin-right: 0 !important;
+    margin-left: 10px;
+    float: right;
 }
