--- a/src/Results.css
+++ b/src/Results.css
@@ -1,4 +1,42 @@
+.row .results-heading {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/* Radar styles */
+.res-radar-wrapper {
+    width: 100%;
+    max-width: 700px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.res-radar-inner {
+    width: 100%;
+    height: auto;
+}
+
 /* Results table */
+.results-infowrapper {
+    border-bottom: 1px solid #dadada;
+}
+.result-rowheading h4 {
+    color: #676767;
+    border-bottom: 1px solid #dadada;
+    margin-bottom: 0.75rem;
+    font-size: 1.1rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    display: block;
+}
+.result-rowinfo ul {
+    padding-left: 1rem;
+}
+.result-rowinfo ul li {
+    color: #676767;
+    margin-bottom: 0.5rem;
+    font-size: 0.9rem;
+    line-height: 150%;
+}
 table {
     background-color: #5a90a7;
     border-color: #fff;
@@ -19,4 +57,15 @@ table tbody tr td {
 table tbody th td, table tbody tr td {
     width: 100%;
     display: block;
+}
+
+@media screen and (min-width: 768px) {
+    .row .results-heading {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .res-radar-wrapper {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
