--- a/src/Results.css
+++ b/src/Results.css
@@ -1,6 +1,6 @@
 .row .results-heading {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 15px !important;
+    padding-right: 15px !important;
 }
 
 /* Radar styles */
@@ -61,8 +61,8 @@ table tbody th td, table tbody tr td {
 
 @media screen and (min-width: 768px) {
     .row .results-heading {
-        padding-left: 0;
-        padding-right: 0;
+        padding-left: 0 !important;
+        padding-right: 0 !important;
     }
     .res-radar-wrapper {
         padding-left: 0;
