Survey style revisions

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ h3 {
 }
 h4.sv_p_title, h4.sv_p_title span {
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 700;
     text-align: center;
 }
 .member-title h2 {
