Adding core print styles

--- a/src/Results.css
+++ b/src/Results.css
@@ -82,3 +82,90 @@ h5.icon-title {
         padding-right: 0;
     }
 }
+
+@media print {
+    .member-title hr {
+        margin: 0;
+    }
+    .container.container-alt, .member-title h2, .member-text p {
+        width: 100%;
+        max-width: none;
+    }
+    .member-text.pb-5 {
+        padding-bottom: 1rem !important;
+    }
+    .row .results-heading h3 {
+        display: block;
+    }
+    .d-flex {
+        display: block !important;
+    }
+    .col-md-6 {
+        width: 100% !important;
+    }
+    .res-radar-wrapper {
+        width: 100%;
+        max-width: none;
+        padding-left: 0;
+        padding-right: 0;
+        text-align: center;
+    }
+    .res-radar-inner {
+        width: 100% !important;
+    }
+    .res-radar-inner canvas {
+        height: 65% !important;
+        width: 65% !important;
+        margin: 0 auto;
+    }
+    .container.container-alt.mb-4 {
+        margin-bottom: 0 !important;
+    }
+    .row.row-alt {
+        break-after: page;
+    }
+    .results-infowrapper {
+        break-inside: page;
+        display: table;
+    }
+    .results-infowrapper.mb-5 {
+        margin-bottom: 0 !important;
+    }
+    .results-inforow {
+        width: 100%;
+        float: left;
+        display: table;
+    }
+    .results-inforow.mb-5 {
+        margin-bottom: 0.25rem !important;
+    }
+    .results-inforow .result-rowheading {
+        width: 100%;
+        display: block;
+    }
+    .col-lg-3 {
+        flex: 0 0 auto !important;
+        width: 26% !important;
+        padding-left: 2%;
+    }
+    .col-lg-3.pe-md-5 {
+        flex: 0 0 auto !important;
+        width: 29.333% !important;
+        padding-left: 2% !important;
+        padding-right: 0 !important;
+    }
+    .col-lg-3.dial-column {
+        width: 12% !important;
+        padding-right: 2%;
+        padding-left: 0;
+    }
+    .dial-column.text-center {
+        text-align: left !important;
+    }
+    h5.icon-title {
+        padding-left: 1rem;
+    }
+    .member-button {
+        display: none;
+    }
+}
