--- a/src/Survey.css
+++ b/src/Survey.css
@@ -66,6 +66,10 @@ h4.sv_p_title .sv-string-viewer {
 }
 
 /* Question styles */
+.container-survey {
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+}
 .sv_row {
     margin-bottom: 0.75em;
 }
@@ -181,6 +185,8 @@ h4.sv_p_title .sv-string-viewer {
     margin-left: 10px;
     float: right;
 }
-@media screen and (max-width: 480px) {
-
+@media screen and (max-width: 600px) {
+    .sv-rating .sv-rating__item {
+        width: 33.333%;
+    }
 }
