--- a/src/Results.css
+++ b/src/Results.css
@@ -46,7 +46,8 @@ h5.icon-title {
     color: #676767;
     border-bottom: 1px solid #dadada;
     margin-bottom: 0.75rem;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
+    /*font-size: 1.1rem;*/
     font-weight: 700;
     text-transform: uppercase;
     display: block;
