--- a/src/Results.css
+++ b/src/Results.css
@@ -64,6 +64,13 @@ h5.icon-title {
     line-height: 150%;
 }
 
+/* Results subtext */
+.results-subtext {
+    border-bottom: 1px solid #dadada;
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+}
+
 @media screen and (min-width: 992px) {
     .dial-column.text-center {
         text-align: left !important;
