--- a/src/Results.css
+++ b/src/Results.css
@@ -137,8 +137,8 @@ h5.icon-title {
     }
     .results-infowrapper {
         /*break-inside: page;
-        display: table;
-        border-bottom: none;*/
+        display: table;*/
+        border-bottom: none;
         position: relative;
         overflow: hidden;
         display: block;
@@ -168,7 +168,9 @@ h5.icon-title {
         vertical-align: top;
     }
     .results-subtext {
-        display: block;
+        border-top: 1px solid #dadada;
+        margin-top: 2rem;
+        display: table;
     }
     .col-lg-3 {
         flex: 0 0 auto !important;
