--- a/src/Results.css
+++ b/src/Results.css
@@ -92,6 +92,7 @@ h5.icon-title {
 }
 .results-grid .grid-item h5 {
     min-height: 45px;
+    padding-right: 10px;
 }
 .grade-element {
     border: 1px solid #676767;
@@ -145,13 +146,10 @@ h5.icon-title {
         padding-left: 0;
         padding-right: 0;
     }
-    .results-grid .grid-item h5 {
-        min-height: auto;
-    }
 }
 @media screen and (min-width: 500px) {
     .results-grid {
-        grid-template-columns: repeat(4, minmax(0, 1fr));
+        grid-template-columns: repeat(5, minmax(0, 1fr));
     }
 }
 
