Add SVG's in place of background colours

--- a/src/Results.css
+++ b/src/Results.css
@@ -77,6 +77,11 @@ h5.icon-title {
     display: inline-block;
     print-color-adjust: exact !important;
 }
+.key-box svg {
+    width: 100%;
+    height: 100%;
+    float: left;
+}
 .key-description {
     width: auto !important;
     margin-left: 0.5em;
@@ -110,18 +115,39 @@ h5.icon-title {
     height: 25px;
     print-color-adjust: exact !important;
 }
+.grade-element svg {
+    width: 100%;
+    height: 100%;
+    float: left;
+}
 .grade-great {
-    background-color: #C06519;
-    background-color: rgba(192, 101, 25, 1);
+    /*background-color: #C06519;*/
+    /*background-color: rgba(192, 101, 25, 1);*/
 }
 .grade-moderate {
-    background-color: rgba(192, 101, 25, 0.75);
+    /*background-color: rgba(192, 101, 25, 0.75);*/
 }
 .grade-some {
-    background-color: rgba(192, 101, 25, 0.5);
+    /*background-color: rgba(192, 101, 25, 0.5);*/
 }
 .grade-none {
-    background-color: white;
+    /*background-color: white;*/
+}
+.grade-great svg rect {
+    fill: rgba(192, 101, 25, 1);
+    stroke: rgba(192, 101, 25, 1);
+}
+.grade-moderate svg rect {
+    fill: rgba(192, 101, 25, 0.75);
+    stroke: rgba(192, 101, 25, 0.75);
+}
+.grade-some svg rect {
+    fill: rgba(192, 101, 25, 0.5);
+    stroke: rgba(192, 101, 25, 0.5);
+}
+.grade-none svg rect {
+    fill: #fff;
+    stroke: #fff;
 }
 .no-printbreak, .no-printbreak .statement-title, .no-printbreak .statement-title em {
     overflow: visible !important;
