--- a/src/Results.css
+++ b/src/Results.css
@@ -77,9 +77,11 @@ h5.icon-title {
     display: inline-block;
     print-color-adjust: exact !important;
 }
-.key-box svg {
+.key-box svg, .key-box svg rect {
     width: 100%;
     height: 100%;
+}
+.key-box svg {
     float: left;
 }
 .key-description {
@@ -115,9 +117,11 @@ h5.icon-title {
     height: 25px;
     print-color-adjust: exact !important;
 }
-.grade-element svg {
+.grade-element svg, .grade-element svg rect {
     width: 100%;
     height: 100%;
+}
+.grade-element svg {
     float: left;
 }
 .grade-great {
